# coderassist

./: LICENSE  README
cluster-scripts/: clusters.cpp  getClusters.sh  getFeatures.sh
findfeatures/: BlockDetails.cpp  BlockDetails.h  CMakeLists.txt  FunctionAnalysis.cpp  FunctionAnalysis.h  GetSymbolicExprVisitor.cpp  GetSymbolicExprVisitor.h  GlobalVars.cpp  GlobalVars.h  Helper.cpp  Helper.h  MainFunction.cpp  MainFunction.h  MyASTVisitor.cpp  MyASTVisitor.h  README  RecursionClass.cpp  RecursionClass.h  SortingClass.cpp  SortingClass.h  StmtDetails.cpp  StmtDetails.h  header.h  includes.h  main.cpp  notes.txt  recursion.h  sorting.h
genfeedback/: .project
genfeedback/src/feedback/: AggregateResult.java  AggregateResult.java.orig  FeedbackSummary.java  FeedbackSummary.java.orig  InputFeedbackTest.java  LoopRewriter.java  MainDriver.java  MainDriver.java.orig  MainDriverTest.java  ProgramSummary.java  ResultStats.java  ResultSummary.java  SanityChecker.java  SummaryModule.java
genfeedback/src/feedback/init/: BlockStatement.java  InitSummary.java
genfeedback/src/feedback/inputs/: InputVar.java  ProgramInputs.java
genfeedback/src/feedback/logging/: Logger.java
genfeedback/src/feedback/output/: OutputDriver.java  OutputStatement.java  OutputSummary.java  RegressionTest.java
genfeedback/src/feedback/update/: RegressionTest.java  RewriteTest.java  SATTest.java  UpdateDriver.java  (+1 more)
scripts/: .clang-format  geterrors.sh  runGetFeaturesPart.sh  runProblem.sh  runTransform.sh  runtool.sh
transform/: CMakeLists.txt  Transform.cpp  Utils.cpp  Utils.h
(+39 files in other folders)
